Diabetes Flask deployment

--- a/Notebook/Diabetes.ipynb
+++ b/Notebook/Diabetes.ipynb
@@ -441,7 +441,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x281c0dc0af0>"
+       "<seaborn.axisgrid.PairGrid at 0x209cfcada90>"
       ]
      },
      "execution_count": 6,
@@ -1359,13 +1359,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf = DecisionTreeClassifier()\n",
-    "parameters = {\"criterion\" : [\"gini\", \"entropy\"],\n",
-    "              \"splitter\" : [\"best\", \"random\"],\n",
-    "              \"max_features\" : [\"auto\", \"sqrt\", \"log2\"],\n",
-    "              \"max_leaf_nodes\" : [0,1,2,5,10,15,100],\n",
-    "              \"max_depth\" : [2,4,6,8,10,12],\n",
-    "              }"
+    "clf = DecisionTreeClassifier()\n"
    ]
   },
   {
@@ -1374,107 +1368,23 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fitting 5 folds for each of 504 candidates, totalling 2520 fits\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  68 tasks      | elapsed:    3.9s\n",
-      "[Parallel(n_jobs=-1)]: Done 1260 tasks      | elapsed:   10.0s\n",
-      "[Parallel(n_jobs=-1)]: Done 2520 out of 2520 | elapsed:   17.5s finished\n"
-     ]
+     "data": {
+      "text/plain": [
+       "DecisionTreeClassifier()"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.metrics import make_scorer\n",
-    "\n",
-    "scorer = make_scorer(recall_score)\n",
-    "grid_obj = GridSearchCV(clf, parameters, scoring=scorer,verbose = 1,n_jobs = -1)\n",
-    "# Fit the data\n",
-    "grid_fit = grid_obj.fit(X, y)\n",
-    "best_clf = grid_fit.best_estimator_"
+    "clf.fit(X_train,y_train)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DecisionTreeClassifier(criterion='entropy', max_depth=8, max_features='log2',\n",
-       "                       max_leaf_nodes=15)"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "best_clf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pr = best_clf.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.8275862068965517"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "recall_score(y_test,pr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.7889908256880734 \n",
-      "F1_score : 0.676056338028169 \n",
-      "Precision_score : 0.5714285714285714\n",
-      "Recall_score : 0.8275862068965517\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f\"Accuracy: {accuracy_score(y_test,pr)} \\nF1_score : {f1_score(y_test,pr)} \\nPrecision_score : {precision_score(y_test,pr)}\\nRecall_score : {recall_score(y_test,pr)}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1483,17 +1393,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(\"model.pkl\",\"wb\") as f:\n",
-    "    pkl.dump(best_clf,f)"
+    "    pkl.dump(clf,f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1503,31 +1413,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pred = model.predict(X_test)"
+    "# from sklearn.model_selection import GridSearchCV\n",
+    "# from sklearn.metrics import make_scorer\n",
+    "\n",
+    "# parameters = {\"criterion\" : [\"gini\", \"entropy\"],\n",
+    "#               \"splitter\" : [\"best\", \"random\"],\n",
+    "#               \"max_features\" : [\"auto\", \"sqrt\", \"log2\"],\n",
+    "#               \"max_leaf_nodes\" : [0,1,2,5,10,15,100],\n",
+    "#               \"max_depth\" : [2,4,6,8,10,12],\n",
+    "#               }\n",
+    "\n",
+    "# scorer = make_scorer(recall_score)\n",
+    "# grid_obj = GridSearchCV(clf, parameters,verbose = 1,n_jobs = -1)\n",
+    "# # Fit the data\n",
+    "# grid_fit = grid_obj.fit(X_train,y_train )\n",
+    "# best_clf = grid_fit.best_estimator_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# best_clf\n",
+    "# pr = best_clf.predict(X_test)\n",
+    "# recall_score(y_test,pr)\n",
+    "# print(f\"Accuracy: {accuracy_score(y_test,pr)} \\nF1_score : {f1_score(y_test,pr)} \\nPrecision_score : {precision_score(y_test,pr)}\\nRecall_score : {recall_score(y_test,pr)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "model = pickle.load(open('model.pkl', 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8275862068965517"
+       "array([1], dtype=int64)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "recall_score(y_test,pred)"
+    "model.predict([[5,5,5,5,5,5,5,5]])"
    ]
   },
   {
