Diabetes Prediction Done

--- a/Notebook/Diabetes.ipynb
+++ b/Notebook/Diabetes.ipynb
@@ -441,7 +441,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x209cfcada90>"
+       "<seaborn.axisgrid.PairGrid at 0x136f25b6970>"
       ]
      },
      "execution_count": 6,
@@ -1388,7 +1388,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle as pkl"
+    "from joblib import dump,load"
    ]
   },
   {
@@ -1397,8 +1397,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"model.pkl\",\"wb\") as f:\n",
-    "    pkl.dump(clf,f)"
+    "with open(\"model.sav\",\"wb\") as f:\n",
+    "    dump(clf,f)"
    ]
   },
   {
@@ -1407,8 +1407,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"model.pkl\",\"rb\") as f:\n",
-    "    model = pkl.load(f)"
+    "with open(\"model.sav\",\"rb\") as f:\n",
+    "    model = load(f)"
    ]
   },
   {
@@ -1444,36 +1444,6 @@
     "# pr = best_clf.predict(X_test)\n",
     "# recall_score(y_test,pr)\n",
     "# print(f\"Accuracy: {accuracy_score(y_test,pr)} \\nF1_score : {f1_score(y_test,pr)} \\nPrecision_score : {precision_score(y_test,pr)}\\nRecall_score : {recall_score(y_test,pr)}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pickle\n",
-    "model = pickle.load(open('model.pkl', 'rb'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1], dtype=int64)"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.predict([[5,5,5,5,5,5,5,5]])"
    ]
   },
   {
